--- a/views/index copy.ejs
+++ b/views/index copy.ejs
@@ -397,7 +397,7 @@
         <!--overview start-->
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i> Welcome to <b>Pocket Master</b> </h3>
+            <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
             <!-- <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-laptop"></i>Dashboard</li>
@@ -983,23 +983,23 @@
 
                   <div class="form quick-post"> -->
                     <!-- Edit profile form (not working)-->
-                    <!-- <form class="form-horizontal"> -->
+                    <form class="form-horizontal">
                       <!-- Title -->
-                      <!-- <div class="form-group">
+                      <div class="form-group">
                         <label class="control-label col-lg-2" for="title">Title</label>
                         <div class="col-lg-10">
                           <input type="text" class="form-control" id="title">
                         </div>
-                      </div> -->
+                      </div>
                       <!-- Content -->
-                      <!-- <div class="form-group">
+                      <div class="form-group">
                         <label class="control-label col-lg-2" for="content">Content</label>
                         <div class="col-lg-10">
                           <textarea class="form-control" id="content"></textarea>
                         </div>
-                      </div> -->
+                      </div>
                       <!-- Cateogry -->
-                      <!-- <div class="form-group">
+                      <div class="form-group">
                         <label class="control-label col-lg-2">Category</label>
                         <div class="col-lg-10">
                           <select class="form-control">
@@ -1010,19 +1010,19 @@
                                                   <option value="4">Funny</option>
                                                 </select>
                         </div>
-                      </div> -->
+                      </div>
                       <!-- Tags -->
-                      <!-- <div class="form-group">
+                      <div class="form-group">
                         <label class="control-label col-lg-2" for="tags">Tags</label>
                         <div class="col-lg-10">
                           <input type="text" class="form-control" id="tags">
                         </div>
-                      </div> -->
+                      </div>
 
                       <!-- Buttons -->
-                      <!-- <div class="form-group"> -->
+                      <div class="form-group">
                         <!-- Buttons -->
-                        <!-- <div class="col-lg-offset-2 col-lg-9">
+                        <div class="col-lg-offset-2 col-lg-9">
                           <button type="submit" class="btn btn-primary">Publish</button>
                           <button type="submit" class="btn btn-danger">Save Draft</button>
                           <button type="reset" class="btn btn-default">Reset</button>
@@ -1033,30 +1033,30 @@
 
 
                 </div>
-                <div class="widget-foot"> -->
+                <div class="widget-foot">
                   <!-- Footer goes here -->
-                <!-- </div>
+                </div>
               </div>
             </div>
 
           </div>
 
-        </div> -->
+        </div>
         <!-- project team & activity end -->
 
-      <!-- </section>
+      </section>
       <div class="text-right">
-        <div class="credits"> -->
+        <div class="credits">
           <!--
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
           -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
-    </section> -->
+    </section>
     <!--main content end-->
   </section>
   <!-- container section start -->
