--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,16 +12,16 @@
   <title>Login Page 2 | Creative - Bootstrap 3 Responsive Admin Template</title>
 
   <!-- Bootstrap CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
   <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet">
   <!--external css-->
   <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.css" rel="stylesheet" />
+  <link href="/stylesheets/elegant-icons-style.css" rel="stylesheet" />
+  <link href="/stylesheets/font-awesome.css" rel="stylesheet" />
   <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
+  <link href="/stylesheets/style.css" rel="stylesheet">
+  <link href="/stylesheets/style-responsive.css" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
@@ -41,9 +41,9 @@
 
   <div class="container">
 
-    <form class="login-form" action="index.html">
+    <form class="login-form" method = "post" action = "/addaccount" >
       <div class="login-wrap">
-        <p class="login-img"><i class="icon_lock_alt"></i></p>
+        <center><p class="login-img"><i class="icon_lock_alt">LOGIN</i></p></center>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_profile"></i></span>
           <input type="text" class="form-control" placeholder="Username" autofocus>
@@ -72,8 +72,9 @@
         </div>
     </div>
   </div>
-
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
 
 </body>
 
 </html>
+
