signup and login done sxcluding explicit verification

--- a/views/404user.ejs
+++ b/views/404user.ejs
@@ -42,7 +42,7 @@
     <p class="text-404">404</p>
 
     <h2>Aww Snap!</h2>
-    <p>Something went wrong or that page doesn’t exist yet. <br><a href="index.html">Return Home</a></p>
+    <p>This user doesn't exist yet. <br><a href="/">Try Again </a></p>
   </div>
   <div class="credits">
           <!--
@@ -51,7 +51,6 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
           -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
 
 
