--- a/views/index.ejs
+++ b/views/index.ejs
@@ -275,7 +275,7 @@
                             <span class="profile-ava">
                                 <img alt="" src="img/avatar1_small.jpg">
                             </span>
-                            <span class="username">Jenifer Smith</span>
+                            <span class="username"><%= LoginInfo.username %></span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
