--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -41,13 +41,18 @@
 
   <div class="container">
 
-    <form class="login-form" method = "post" action = "/loginverify" >
+    <form class="login-form" method = "post" action = "/addaccount" >
       <div class="login-wrap">
-        <center><p class="login-img"><i class="icon_lock_alt">LOGIN</i></p></center>
+        <center><p class="login-img"><i class="icon_lock_alt">Sign Up</i></p></center>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_profile"></i></span>
           <input type="text" name = "email" class="form-control"  placeholder="Email Address" autofocus>
         </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" name = "username" class="form-control"  placeholder="User Name" autofocus>
+        </div>
+
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_key_alt"></i></span>
           <input type="password" name = "password" class="form-control" placeholder="Password">
@@ -56,11 +61,9 @@
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
             </label>
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-        <button class="btn btn-info btn-lg btn-block" ><a href = "/signup">Signup</a></button>
+        <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
       </div>
     </form>
-    
     <div class="text-right">
       <div class="credits">
           <!--
