--- a/views/income.ejs
+++ b/views/income.ejs
@@ -433,48 +433,62 @@
 
 <div>
         <section class="ftco-section">
-			<div class="container">
-				<div class="row no-gutters ftco-services">
+			<div class="container"><a href="#">
+				<div class="row no-gutters ftco-services"><a href="buttons.html">
           <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate fadeInUp ftco-animated">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-                <a href = "/ok">	<span class="flaticon-business"></span></a>
-              </div><div>
-                
-              </div>
+              <div class="media block-6 services mb-md-0 mb-4">
+              <div  class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
+                	<span class="flaticon-business"></span>
+              </div></a>
               <div class="media-body">
                 <h3 class="heading">BUSINESS</h3>
            <!--     <span>On order over $100</span>-->
               </div>
             </div>      
           </div>
+          <a href="buttons.html">
           <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate fadeInUp ftco-animated">
             <div class="media block-6 services mb-md-0 mb-4">
               <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
             		<span class="flaticon-extra"></span>
-              </div>
+              </div></a>
               <div class="media-body">
                 <h3 class="heading">EXTRA</h3>
            <!--     <span>Product well package</span>-->
               </div>
             </div>    
-          </div>
+          </div><a href="buttons.html">
           <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate fadeInUp ftco-animated">
             <div class="media block-6 services mb-md-0 mb-4">
               <div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
             		<span class="flaticon-loan"></span>
-              </div>
+              </div></a>
               <div class="media-body">
                 <h3 class="heading">LOAN</h3>
            <!--     <span>Quality Products</span>-->
               </div>
             </div>      
+          </div><button class="open-button" onclick="openForm()">
           </div>
           <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate fadeInUp ftco-animated">
             <div class="media block-6 services mb-md-0 mb-4">
               <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
             		<span class="flaticon-salary"><span class="flaticon-salary"></span></span>
-              </div>
+              </div></button>
+
+              <div class="form-popup" id="myForm">
+                <form action="" class="form-container">
+                  <h1>Login</h1>
+              
+                  <label for="email"><b>Email</b></label>
+                  <input type="text" placeholder="Enter Email" name="email" required>
+              
+                  <label for="psw"><b>Password</b></label>
+                  <input type="password" placeholder="Enter Password" name="psw" required>
+              
+                  <button type="submit" class="btn">Login</button>
+                  <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                </form>
               <div class="media-body">
                 <h3 class="heading">SALARY</h3>
               <!--  <span>24/7 Support</span>-->
@@ -487,11 +501,12 @@
     <section class="ftco-section">
 			<div class="container">
 				<div class="row no-gutters ftco-services">
+            <a href="buttons.html">
           <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate fadeInUp ftco-animated">
             <div class="media block-6 services mb-md-0 mb-4">
               <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
             		<span class="flaticon-pocket"></span>
-              </div>
+              </div></a>
               <div class="media-body">
                 <h3 class="heading">POCKET MONEY</h3>
            <!--     <span>On order over $100</span>-->
@@ -1277,6 +1292,15 @@
           }
         });
       });
+    
+function openForm() {
+  document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+}
+
     </script>
 
 </body>
