connected home page and income page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
       </div>
 
       <!--logo start-->
-      <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="/home" class="logo">Pocket <span class="lite">Master</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -315,16 +315,16 @@
       <div id="sidebar" class="nav-collapse ">
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
-          <li class="active">
-            <a class="" href="index.html">
+          <li class="sub">
+            <a class="" href="/income">
                           <i class="icon_house_alt"></i>
-                          <span>Dashboard</span>
+                          <span>INCOME WALLET</span>
                       </a>
           </li>
           <li class="sub-menu">
             <a href="javascript:;" class="">
-                          <i class="icon_document_alt"></i>
-                          <span>Forms</span>
+                          <i class="expenses"></i>
+                          <span>EXPENSES WALLET</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -335,7 +335,7 @@
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
+                          <span>SAVINGS WALLET</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -347,10 +347,10 @@
           <li>
             <a class="" href="widgets.html">
                           <i class="icon_genius"></i>
-                          <span>Widgets</span>
+                          <span>MY GOALS</span>
                       </a>
           </li>
-          <li>
+     <!--   <li>
             <a class="" href="chart-chartjs.html">
                           <i class="icon_piechart"></i>
                           <span>Charts</span>
@@ -385,7 +385,7 @@
             </ul>
           </li>
 
-        </ul>
+        </ul>-->  
         <!-- sidebar menu end-->
       </div>
     </aside>
