--- a/public/stylesheets/123.css
+++ b/public/stylesheets/123.css
@@ -18,8 +18,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  bottom: 170px;
+  right: 750px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
