--- a/views/income.ejs
+++ b/views/income.ejs
@@ -426,7 +426,18 @@
             </ol> -->
           </div>
         </div>
-
+<div>ADD
+  <button class="add" onclick="add()">+</button>
+  <div class="form-popup" id="add">
+    <form action="" class="form-container">
+      <h1>ADD THE POCKET</h1>
+      <label for="name"><b>NAME</b></label>
+      <input type="text" placeholder="pocket name" name="name" required>
+      <button type="submit" class="btn">Enter</button>
+      <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
+      </form>
+  </div>
+</div>
 
     <div class='business'>
         <button class="open-button" onclick="openForm()">BUSINESS</button>
@@ -599,6 +610,14 @@ function openForm() {
 
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
+}
+
+function add(){
+  document.getElementById("add").style.display ="block";
+
+}
+function closeadd(){
+  document.getElementById("add").style.display="none";
 }
 
     </script>
