--- a/views/income.ejs
+++ b/views/income.ejs
@@ -223,7 +223,7 @@
                                     <span class="time">2 hrs</span>
                                     </span>
                                     <span class="message">
-                                        I am like to buy this Admin Template.
+                                        Hi
                                     </span>
                                 </a>
               </li>
@@ -297,7 +297,7 @@
                             <span class="profile-ava">
                                 <img alt="" src="img/avatar1_small.jpg">
                             </span>
-                            <span class="username">Jenifer Smith</span>
+                            <span class="username">smilerac</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -340,13 +340,13 @@
           <li class="active">
             <a class="" href="/income">
                           <i class="icon_house_alt"></i>
-                          <span>INCOME WALLET</span>
+                          <span>Income Wallet</span>
                       </a>
           </li>
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="expenses"></i>
-                          <span>EXPENSES WALLET</span>
+                          <span>Expenses Wallet</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -357,7 +357,7 @@
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>SAVINGS WALLET</span>
+                          <span>Savings Wallet</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -369,7 +369,7 @@
           <li>
             <a class="" href="widgets.html">
                           <i class="icon_genius"></i>
-                          <span>MY GOALS</span>
+                          <span>My Goals</span>
                       </a>
           </li>
      <!--   <li>
