--- a/views/index.ejs
+++ b/views/index.ejs
@@ -318,13 +318,13 @@
           <li class="sub">
             <a class="" href="/income">
                           <i class="icon_house_alt"></i>
-                          <span>INCOME WALLET</span>
+                          <span>Income Wallet</span>
                       </a>
           </li>
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="expenses"></i>
-                          <span>EXPENSES WALLET</span>
+                          <span>Expenses Wallet</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -335,7 +335,7 @@
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>SAVINGS WALLET</span>
+                          <span>Savings Wallet</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
@@ -347,7 +347,7 @@
           <li>
             <a class="" href="widgets.html">
                           <i class="icon_genius"></i>
-                          <span>MY GOALS</span>
+                          <span>My Goals</span>
                       </a>
           </li>
      <!--   <li>
