--- a/views/income.ejs
+++ b/views/income.ejs
@@ -429,18 +429,20 @@
 <div>ADD
   <button class="add" onclick="add()">+</button>
   <div class="form-popup" id="add">
-    <form action="" class="form-container">
-      <h1>ADD THE POCKET</h1>
-      <label for="name"><b>NAME</b></label>
-      <input type="text" placeholder="pocket name" name="name" required>
+    <form action="/addpocket" class="form-container" method = 'post'>
+      <h1>Add a Pocket</h1>
+      <label for="name"><b>Name</b></label>
+      <input type="text" placeholder="Pocket Name" name="name" required>
+      <label for="amount"><b>Amount</b></abel>
+      <input type="text" placeholder="Rs." name="amount" required>
       <button type="submit" class="btn">Enter</button>
       <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
       </form>
   </div>
 </div>
-
+<% incomes.forEach(function(income) {%>
     <div class='business'>
-        <button class="open-button" onclick="openForm()">BUSINESS</button>
+        <button class="open-button" onclick="openForm()"><%= income.name %></button>
         <div class="form-popup" id="myForm">
           <form action="" class="form-container">
                 <h1>BUSINESS POCKET</h1>
@@ -452,8 +454,10 @@
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
           </form>
         </div>
-        </div>
-        <br>
+    </div>
+    <br>
+    <% }) %>
+       
         <div class='extra'>
             <button class="open-button" onclick="openForm()">EXTRA</button>
             <div class="form-popup" id="myForm">
@@ -614,6 +618,10 @@ function closeForm() {
 
 function add(){
   document.getElementById("add").style.display ="block";
+
+
+
+
 
 }
 function closeadd(){
