--- a/public/stylesheets/123.css
+++ b/public/stylesheets/123.css
@@ -13,12 +13,38 @@ body {font-family: Arial, Helvetica, sans-serif;}
   
   width: 280px;
 }
+.open-butto {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  
+  width: 280px;
 
+}
+.form-popup1 {
+  display: none;
+  position: fixed;
+  bottom: 265px;
+  right: 750px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
 /* The popup form - hidden by default */
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 170px;
+  bottom: 150px;
+  right: 750px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+.form-pop {
+  display: none;
+  position: fixed;
+  bottom: 150px;
   right: 750px;
   border: 3px solid #f1f1f1;
   z-index: 9;
@@ -65,5 +91,47 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+.form-contain {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-contain input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-contain input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-contain .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-contain .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-contain .btn:hover, .open-button:hover {
   opacity: 1;
 }
