--- a/views/income.ejs
+++ b/views/income.ejs
@@ -428,7 +428,7 @@
         </div>
 <div>ADD
   <button class="add" onclick="add()">+</button>
-  <div class="form-popup" id="add">
+  <div class="form-popup1" id="add">
     <form action="" class="form-container">
       <h1>ADD THE POCKET</h1>
       <label for="name"><b>NAME</b></label>
@@ -440,17 +440,26 @@
 </div>
 
     <div class='business'>
-        <button class="open-button" onclick="openForm()">BUSINESS</button>
-        <div class="form-popup" id="myForm">
+        <button class="open-button" onclick="openedit()">BUSINESS</button>
+        <div class="form-popup" id="view">
           <form action="" class="form-container">
                 <h1>BUSINESS POCKET</h1>
                 <label for="name"><b>NAME</b></label>
-                <input type="text" value="BUSINESS" name="name" required>
                 <label for="amount"><b>AMOUNT</b></label>
-                <input type="text" placeholder="Enter Value" name="ammount" required>
-            <button type="submit" class="btn">Enter</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-          </form>
+            <button  class="open-butto"  onclick="closeedit(); openForm(); ">Edit</button>
+            <div class="form-pop" id="myForm">
+                <form action="" class="form-contain">
+                      <h1>Edit POCKET</h1>
+                      <label for="name"><b>NAME</b></label>
+                      <input type="text" value="BUSINESS" name="name" required>
+                      <label for="amount"><b>AMOUNT</b></label>
+                      <input type="text" placeholder="Enter Value" name="ammount" required>
+                  <button type="submit" class="btn">Enter</button>
+                  <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                </form>
+              </div>
+           <!-- <button type="button" class="btn cancel" onclick="closeForm()">Close</button>-->
+            </form>
         </div>
         </div>
         <br>
@@ -468,7 +477,7 @@
                 </form>
             </div>
         </div>
-        <br>
+ <!--      <br>
             <div class='loan'>
                 <button class="open-button" onclick="openForm()">LOAN</button>
                     <div class="form-popup" id="myForm">
@@ -516,7 +525,7 @@
                 </section></section>
    
        
-
+--> 
 
   <!-- javascripts -->
   <script src="/javascripts/jquery.js"></script>
@@ -603,9 +612,17 @@
           }
         });
       });
-    
+function openedit(){
+  document.getElementById("view").style.display="block";
+}    
 function openForm() {
+  
   document.getElementById("myForm").style.display = "block";
+  
+  
+}
+function closeedit() {
+  document.getElementById("view").style.display = "none";
 }
 
 function closeForm() {
