to accept change

--- a/views/income.ejs
+++ b/views/income.ejs
@@ -440,9 +440,9 @@
       </form>
   </div>
 </div>
-<% incomes.forEach(function(income) {%>
+
     <div class='business'>
-        <button class="open-button" onclick="openForm()"><%= income.name %></button>
+        <button class="open-button" onclick="openForm()">BUsiness</button>
         <div class="form-popup" id="myview">
           <form action="" class="form-container">
                 <h1>BUSINESS POCKET</h1>
@@ -465,7 +465,7 @@
         </div>
     </div>
     <br>
-    <% }) %>
+
        
         <div class='extra'>
             <button class="open-button" onclick="openForm()">EXTRA</button>
