--- a/views/income.ejs
+++ b/views/income.ejs
@@ -65,7 +65,7 @@
   ======================================================= -->
 </head>
 
-<body>
+<body background = "/images/cartoonmoney.jpg">
   <!-- container section start -->
   <section id="container" class="">
 
