--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -51,19 +51,23 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-family: Comfortaa;
+    font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background: url('/images/login_background.png');
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  /* background-color: #fff; } */
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
 hr {
-  -webkit-box-sizing: content-box;
+  -webkit-box-sizing: content-box;  
   box-sizing: content-box;
   height: 0;
   overflow: visible; }
@@ -9872,6 +9876,7 @@ textarea.form-control {
   padding: 25px;
   font-size: 15px;
   width: 100%;
+  font-family: Comfortaa;
   background: #fff; }
   .sidebar-box *:last-child {
     margin-bottom: 0; }
