--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
   ======================================================= -->
 </head>
 
-<body>
+<body background = "/images/cartoonmoney.jpg">
   <!-- container section start -->
   <section id="container" class="">
 
