changed setgoal file to ejs and made expenses.ejs file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -345,7 +345,7 @@
             </ul>
           </li>
           <li>
-            <a class="" href="widgets.html">
+            <a class="" href="/setgoal">
                           <i class="icon_genius"></i>
                           <span>My Goals</span>
                       </a>
