--- a/views/setgoal.ejs
+++ b/views/setgoal.ejs
@@ -1,6 +1,7 @@
 <head>
     <link href="/stylesheets/setgoal.css" rel="stylesheet">
    </head>
+   
    <section class = "goalbody">
    <h1>Set your Goals</h1>
    <div class="box">
@@ -16,11 +17,11 @@
               <h5 class="card-title text-center">Set Goals</h5>
               <form class="form-signin">
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <input type="text" id="inputEmail" class="form-control" placeholder="Expenses goal" required autofocus>
                   <label for="inputEmail">Expenses Goal </label>
                 </div>
                 <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <input type="text" id="inputPassword" class="form-control" placeholder="Savinh goal" required>
                   <label for="inputPassword">Saving goal</label>
                 </div>
                 <div class="custom-control custom-checkbox mb-3">
