--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -27,6 +27,7 @@
    <link href="/stylesheets/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen" />
    <!-- owl carousel -->
   <link rel="stylesheet" href="/stylesheets/owl.carousel.css" type="text/css"> 
+  <link rel="stylesheet" href="/stylesheets/expense.css" type="text/css"> 
   <link href="/stylesheets/jquery-jvectormap-1.2.2.css" rel="stylesheet"> 
    <!-- Custom styles -->
    <link rel="stylesheet" href="/stylesheets/fullcalendar.css"> 
@@ -426,39 +427,37 @@
             </ol> -->
           </div>
         </div>
-<div>ADD
-  <button class="add" onclick="add()">+</button>
-  <div class="form-popup" id="add">
-    <form action="/addpocket" class="form-container" method = 'post'>
-      <h1>Add a Pocket</h1>
-      <label for="name"><b>Name</b></label>
-      <input type="text" placeholder="Pocket Name" name="name" required>
-      <label for="amount"><b>Amount</b></abel>
-      <input type="text" placeholder="Rs." name="amount" required>
-      <button type="submit" class="btn">Enter</button>
-      <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
-      </form>
-  </div>
-</div>
-<br>
-
-    <div class='business'>
-        <button class="open-button" onclick="openForm()">BUsiness</button>
-        <div class="form-popup" id="myview">
-          <form action="" class="form-container">
-                <h1>BUSINESS POCKET</h1>
+    <div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Immediate Obligations</button>
+    <div id="myDropdown" class="dropdown-content">
+      <div>ADD
+          <button class="add" onclick="add()">+</button>
+              <div class="form-popup" id="add">
+                  <form action="" class="form-container">
+                      <h1>ADD THE POCKET</h1>
                       <label for="name"><b>NAME</b></label>
-                      <input type="text" value="BUSINESS" name="name" required>
-                      <label for="amount"><b>AMOUNT</b></label>
-                      <input type="text" placeholder="Enter Value" name="ammount" required>
-                  <button type="submit" class="btn">Enter</button>
-                  <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-                </form>
-              </div>
-           <!-- <button type="button" class="btn cancel" onclick="closeForm()">Close</button>-->
-            </form>
-        </div>
-    </div>
+                      <input type="text" placeholder="pocket name" name="name" required>
+                      <button type="submit" class="btn">Enter</button>
+                      <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
+                  </form>
+              </div>  
+              </div>  
+              <div class='rent'>
+                      <button class="open-button" onclick="openForm()">Rent</button>
+                      <div class="form-popup" id="myForm">
+                        <form action="" class="form-container">
+                              <h1>RENT POCKET</h1>
+                              <label for="name"><b>NAME</b></label>
+                              <input type="text" value="BUSINESS" name="name" required>
+                                  <label for="amount"><b>AMOUNT</b></label>
+                                  <input type="text" placeholder="Enter Value" name="ammount" required>
+                          <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                        </form>
+                      </div>
+                      </div>
+  
+      
+   
     <br>
 
        
@@ -632,10 +631,25 @@ function add(){
   document.getElementById("add").style.display ="block";
 
 
-
-
-
+  function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
 }
+
+// Close the dropdown if the user clicks outside of it
+/*window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+
+
+}*/
 function closeadd(){
   document.getElementById("add").style.display="none";
 }
