changed font-family to comfortaa and added background images to fit the theme

--- a/views/income.ejs
+++ b/views/income.ejs
@@ -57,6 +57,7 @@
 <link rel="stylesheet" href="/stylesheets/css/flaticon.css">
 <link rel="stylesheet" href="/stylesheets/css/icomoon.css">
 <link rel="stylesheet" href="/stylesheets/css/style.css">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
   <!-- =======================================================
     Theme Name: NiceAdmin
     Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
