--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,6 +22,7 @@
   <!-- Custom styles -->
   <link href="/stylesheets/style.css" rel="stylesheet">
   <link href="/stylesheets/style-responsive.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
