--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -52,15 +52,17 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: Comfortaa;
-    font-size: 1rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background: url('/images/login_background.png');
+  background: url('/images/income.png');
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+
   /* background-color: #fff; } */
 
 [tabindex="-1"]:focus {
