--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
    <link href="/stylesheets/style-responsive.css" rel="stylesheet" />
    <link href="/stylesheets/xcharts.min.css" rel=" stylesheet">
    <link href="/stylesheets/jquery-ui-1.10.4.min.css" rel="stylesheet"> 
+   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
   <!-- =======================================================
     Theme Name: NiceAdmin
     Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
