--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,10 +49,11 @@
     width:50%;
 }
 body {
-    background :url('/images/cartoonmoney.jpg');
+    background :url('/images/home.jpg')no-repeat top right fixed;
     background-size: cover;
-    box-align:left;
-    height: 50%;
+    background-position: 5px 63px;    
+    box-align:right;
+    height: 10%;
     width:50%;  
 
     color: #797979;
@@ -71,13 +72,13 @@ body {
 
 h1,h2,h3,h4,h5{
 
-    font-weight: 300;
+    font-weight: 900;
 
 }
 
 label{
 
-    font-weight: 300;
+    font-weight: 900;
 
 }
 
@@ -176,12 +177,13 @@ table tr th { color: #688a7e;}
 .login-body {
 
     background-color: #f1f2f7;
+    
 
 }
 
 .login-img-body{
 
-  background: url('/images/login_background.png') no-repeat center center fixed;
+  background: url('/images/loginn.png') no-repeat center center fixed;
 
   -webkit-background-size: cover;
 
@@ -191,6 +193,7 @@ table tr th { color: #688a7e;}
 
   background-size: cover;
   font-family : Comfortaa;
+  font-weight: 900;
 
 }
 
@@ -210,7 +213,7 @@ table tr th { color: #688a7e;}
 
 .login-img3-body{
 
-  background: url('/images/login_background.png') no-repeat center center fixed;
+  background: url('/images/cartoonmoney.jpg') no-repeat center center fixed;
 
   -webkit-background-size: cover;
 
@@ -233,6 +236,7 @@ table tr th { color: #688a7e;}
 
     background: #d5d7de;
      */
+     font-weight: 900;
      position: absolute;
      left : 32%;
      top : 25%;
@@ -240,14 +244,20 @@ table tr th { color: #688a7e;}
     margin : 2rem auto;
     border : 2px solid #E74C3C;
   /*   background-color : #FF7933; */
-    background-color: rgba(23,56,99,0.5);
-    opacity: 0.9;
+    background-color: rgba(23, 57, 102, 0.5);
+    opacity: 0.8;
     padding : 2rem;
-    color : white;
+    color : rgb(16, 72, 94);
     border-radius : 5px;
     font-family : Comfortaa;
+    font-weight: 900;
+    
 
 }
+/* img {
+    padding: 5px;
+    width: 80px;
+  } */
 
 .login-img-body .login-form{
 
@@ -279,7 +289,7 @@ table tr th { color: #688a7e;}
 
 .login-form a{
 
-    color: #688a7e !important;
+    color: #3593a3 !important;
 
 }
 
@@ -303,7 +313,7 @@ table tr th { color: #688a7e;}
 
     text-transform: uppercase;
 
-    font-weight: 300;
+    font-weight: 900;
 
     font-family: Comfortaa;
 
@@ -321,7 +331,7 @@ table tr th { color: #688a7e;}
 
     font-weight: normal;
 
-    font-weight: 300;
+    font-weight: 900;
 
     font-family: Comfortaa;
 
@@ -355,13 +365,14 @@ table tr th { color: #688a7e;}
 
     font-size: 50px;
 
-    font-weight: 300;
+    font-weight: 900;
 
 }
 
 .login-form .input-group{
 
     padding-bottom: 15px;
+    font-weight: 900;
 
 }
 
@@ -373,7 +384,7 @@ table tr th { color: #688a7e;}
 
     color: #8b9199;
 
-    font-weight: normal;
+    font-weight: 900;
 
     line-height: 1;
 
@@ -409,11 +420,11 @@ table tr th { color: #688a7e;}
 
     background: #f67a6e;
 
-    color: #fff;
+    color: rgb(61, 121, 150);
 
     text-transform: uppercase;
 
-    font-weight: 300;
+    font-weight: 900;
 
     font-family: Comfortaa;
 
@@ -433,7 +444,7 @@ table tr th { color: #688a7e;}
 
     font-size: 16px;
 
-    font-weight: 300;
+    font-weight: 900;
 
 }
 
@@ -553,7 +564,7 @@ table tr th { color: #688a7e;}
 
 .modal-header .close{
 
-    font-weight: 300;
+    font-weight: 900;
 
     font-size: 30px;
 
@@ -1108,7 +1119,13 @@ ul.sidebar-menu li.active a i {
 
 
 a.logo {
+    /* background-image: url('/images/logo.png');
+background-repeat: no-repeat;
+padding-left: 30px;  /* width of the image plus a little extra padding */
+display: block;
 
+width: 80px; 
+    
     font-size: 22px;
 
     font-weight: 300;
@@ -1120,6 +1137,9 @@ a.logo {
     margin-top: 15px;
 
     text-transform: uppercase;
+    content:url('/images/logo.png');
+    padding: 5px;
+    width: 80px;
 
 }
 
