--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
       </div>
 
       <!--logo start-->
-      <a href="/home" class="logo">Pocket <span class="lite">Master</span></a>
+      <a href="/home" class="logo">Mero <span class="lite">Bachat</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -398,7 +398,7 @@
         <!--overview start-->
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i> Welcome to <b>Pocket Master</b> </h3>
+            <h3 class="page-header"><i class="fa fa-laptop"></i><%= LoginInfo.username %>, Welcome to <b>Mero Bachat</b> </h3>
             <!-- <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-laptop"></i>Dashboard</li>
