expenses ejs file made but incomplete

--- a/views/income.ejs
+++ b/views/income.ejs
@@ -442,12 +442,12 @@
   </div>
 </div>
 <br>
-<% incomes.forEach(function(income) {%>
+
     <div class='business'>
-        <button class="open-button" onclick="openForm()"><%= income.name %></button>
+        <button class="open-button" onclick="openForm()"></button>
         <div class="form-popup" id="myForm">
           <form action="" class="form-container">
-                <h1><%= income.name %> Pocket</h1>
+                <h1>  sthgPocket</h1>
                 <label for="name"><b>Name</b></label>
                 <input type="text" placeholder="Pocket Name" name="name" required>
                 <label for="amount"><b>Amount</b></abel>
@@ -458,7 +458,7 @@
         </div>
     </div>
     <br>
-    <% }) %>
+
     </section></section>
    
        
