--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
       </div>
 
       <!--logo start-->
-      <a href="/home" class="logo">Mero <span class="lite">Bachat</span></a>
+      <a href="/home" class="logo">Mero <span class="lite"></span>Bachat</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
