--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/mygoals.css">
 </head>
 <section class = "goalbody">
 <h1>Set your Goals</h1>
@@ -13,16 +13,17 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5" >
           <div class="card-body">
-            <h5 class="card-title text-center">Set Goals</h5>
-            <form class="form-signin">
+              <h5 class="card-title text-center">Your Goals</h5>
+            <h5 class="card-title text-center">New Goal</h5>
+            <form class="form-signin" method = "post" action = "/savegoal">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                <label for="inputEmail">Expenses Goal </label>
+                <input type="text" name = "name" id="inputEmail" class="form-control" placeholder="Ex: Car" required autofocus>
+                <label for="inputEmail">What do you wanna save for? </label>
               </div>
 
               <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                <label for="inputPassword">Saving goal</label>
+                <input type="text" name = "amount" id="inputPassword" class="form-control" placeholder="Password" required>
+                <label for="inputPassword">Goal Amount</label>
               </div>
  
               <div class="custom-control custom-checkbox mb-3">
