changes made in income views

--- a/views/income.ejs
+++ b/views/income.ejs
@@ -449,13 +449,8 @@
           <form action="" class="form-container">
                 <h1>  sthgPocket</h1>
                 <label for="name"><b>Name</b></label>
-                <input type="text" placeholder="Pocket Name" name="name" required>
                 <label for="amount"><b>Amount</b></abel>
-                <input type="text" placeholder="Rs." name="amount" required>
-                <button type="submit" class="btn">Enter</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-          </form>
-        </div>
+                <a href = '/form'><input type="button" class="btn " value="Edit"></a> </form></div>
     </div>
     <br>
 
