--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@
     width:50%;
 }
 body {
-    background :url('/images/home.jpg')no-repeat top right fixed;
+    background :url('/images/o.jpg')no-repeat top right fixed;
     background-size: cover;
     background-position: 5px 63px;    
     box-align:right;
