--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
   ======================================================= -->
 </head>
 
-<body background = "/images/cartoonmoney.jpg">
+<body>
   <!-- container section start -->
   <section id="container" class="">
 
@@ -396,7 +396,7 @@
     <section id="main-content">
       <section class="wrapper">
         <!--overview start-->
-        <div class="row">
+        <div class="row"><center><img src="/images/home.jpg" height="200" width="200"></center> 
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-laptop"></i><%= LoginInfo.username %>, Welcome to <b>Mero Bachat</b> </h3>
             <!-- <ol class="breadcrumb">
