--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -13,10 +13,12 @@
     <div><h3></h3>ADD the pocket</h3>
         <button class="add" onclick="add()">+</button>
             <div class="form-popup" id="add">
-                <form action="" class="form-container">
-                    <h1>ADD THE POCKET</h1>
+                <form action="/saveexpense" method = "post" class="form-container">
+                    <h1>Add a pocket</h1>
                     <label for="name"><b>NAME</b></label>
                     <input type="text" placeholder="pocket name" name="name" required>
+                    <label for="password"><b>NAME</b></label>
+                    <input type="text" placeholder="pocket name" name="amount" required>
                     <button type="submit" class="btn">Enter</button>
                     <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
                 </form>
@@ -38,7 +40,7 @@
 </div>
 <br><br>
 <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">True Expenses</button>
+        <button onclick="myFunction()" class="dropbtn"><%= ExpenseInfo.name %></button>
         <div id="myDropdown" class="dropdown-content">
           <div><h3></h3>ADD the pocket</h3>
               <button class="add" onclick="add()">+</button>
