to acept the change

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,7 +4,7 @@
 </head>
 <!--<link href="/stylesheets/form.css" rel="stylesheet" /> -->
 <body>
-
+<div class="edit">
     <form action="" class="form-container">
           <h1>BUSINESS POCKET</h1>
           <label for="name"><b>NAME</b></label><br>
