--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -3,6 +3,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 
+#form{
+    position:absolute;
+    top:50%;
+    left:50%;
+}
 
 /* The popup form - hidden by default */
 /* Full-width input fields */
