some changes in form

--- a/public/stylesheets/expense.css
+++ b/public/stylesheets/expense.css
@@ -13,7 +13,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   
   width: 280px;
 }
-
+.add{
+  align:"center";
+}
 
 /* The popup form - hidden by default */
 .form-popup {
@@ -97,7 +99,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #0073e6;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
