--- a/views/form.ejs
+++ b/views/form.ejs
@@ -2,17 +2,21 @@
     <title>dbchjdb</title>
 
 </head>
-<!--<link href="/stylesheets/form.css" rel="stylesheet" /> -->
+<link href="/stylesheets/form.css" rel="stylesheet" /> 
 <body>
 <div class="edit">
-    <form action="" class="form-container">
+        <div class="container-contact1">
+    <form action="" class="form-container" >
           <h1>BUSINESS POCKET</h1>
           <label for="name"><b>NAME</b></label><br>
-          <input type="text" value="BUSINESS" name="name" required><br>
+          <input class="input1" type="text" value="BUSINESS" name="name" required><br>
+          <span class="shadow-input1"></span>
           <label for="amount"><b>AMOUNT</b></label><br>
-          <input type="text" placeholder="Enter Value" name="ammount" required><br>
-  <button type="button" class="btn" onclick="">Submit</button>
+          <input type="text" class="input1" placeholder="Enter Value" name="ammount" required><br>
+          <span class="shadow-input1"></span>
+          <button type="button" class="btn" onclick="">Submit</button>
 </form>
+</div>
 </div>
 </body>
 </html>
