--- a/views/index.ejs
+++ b/views/index.ejs
@@ -323,7 +323,7 @@
                       </a>
           </li>
           <li class="sub-menu">
-            <a href="javascript:;" class="">
+            <a href="/expense" class="">
                           <i class="expenses"></i>
                           <span>Expenses Wallet</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
