saving ejs file made

--- a/views/income.ejs
+++ b/views/income.ejs
@@ -448,7 +448,7 @@
         <div class="form-popup" id="myForm">
           <form action="" class="form-container">
                 <h1>  sthgPocket</h1>
-                <label for="name"><b>Name</b></label>
+                <label for="name"><b>Name</b></label><br>
                 <label for="amount"><b>Amount</b></abel>
                 <a href = '/form'><input type="button" class="btn " value="Edit"></a> </form></div>
     </div>
