--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -464,13 +464,13 @@
 </div>
 <br><br>
 <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Imediate obligations</button>
+        <button onclick="myFunction()" class="dropbtn">Imediate obligations<i class="fa fa-caret-down"></i></button>
         <div id="myDropdown" class="dropdown-content">
           <div><h3></h3>ADD the pocket</h3>
               <button class="add" onclick="add()">+</button>
                   <div class="form-popup" id="add">
                       <form action="" class="form-container">
-                          <h1 text-align="center">ADD THE POCKET</h1>
+                          <h1 class="add">ADD THE POCKET</h1>
                           <label for="name"><b>NAME</b></label>
                           <input type="text" placeholder="pocket name" name="name" required>
                           <button type="submit" class="btn">Enter</button>
@@ -483,7 +483,7 @@
                           <div class="form-popup" id="myedit">
                             <form action="" class="form-container">
                                   <h1>EDIT POCKET</h1>
-                                  <label for="name"><b>NAME</b></label>
+                                  <label for="name"><b>NAME</b></label><br>
                                   <label for="amount"><b>AMOUNT</b></label>
                              <a href = '/form'><input type="button" class="btn " value="Edit"></a> </form></div>
                           </div>
